WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87954
[Qt][WK2] setPageItemRectVisible() is not guarded by ViewportUpdateDeferrer at scaleAnimationValueChanged().
https://bugs.webkit.org/show_bug.cgi?id=87954
Summary
[Qt][WK2] setPageItemRectVisible() is not guarded by ViewportUpdateDeferrer a...
alan
Reported
2012-05-31 04:44:48 PDT
Guarding is set up at scaleAnimationStateChanged to protect setPageItemRectVisible(). However, setting the end value on the ScaleAnimation object at animatePageItemRectVisible(), triggers scaleAnimationValueChanged, before animation is started. (and state changed is called)
Attachments
proposed patch
(2.89 KB, patch)
2012-06-06 10:21 PDT
,
Andras Becsi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andras Becsi
Comment 1
2012-06-04 04:36:03 PDT
I'm looking into this issue.
Andras Becsi
Comment 2
2012-06-06 10:21:12 PDT
Created
attachment 146059
[details]
proposed patch
Kenneth Rohde Christiansen
Comment 3
2012-06-06 14:17:58 PDT
Comment on
attachment 146059
[details]
proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=146059&action=review
> Source/WebKit2/UIProcess/qt/QtViewportHandler.cpp:369 > + // Resetting the end value or the easing curve of the scale animation triggers a recalculation
end value? duration?
Andras Becsi
Comment 4
2012-06-07 02:38:59 PDT
Committed
r119697
: <
http://trac.webkit.org/changeset/119697
>
Andras Becsi
Comment 5
2012-06-07 02:40:33 PDT
Comment on
attachment 146059
[details]
proposed patch Clearing flags from attachment.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug