[Qt][WK2] setPageItemRectVisible() is not guarded by ViewportUpdateDeferrer at scaleAnimationValueChanged() https://bugs.webkit.org/show_bug.cgi?id=87954

Reviewed by Kenneth Rohde Christiansen.

Resetting the end value, the easing curve or the duration of the scale animation triggers
a recalculation of the animation interval. This might change the current value of the
animated property.
Since guarding of setPageItemRectVisible() relies on animation state change we have to
make sure we only act on animation value changes if the animation is in active state.

* UIProcess/qt/QtViewportHandler.cpp:
(WebKit::QtViewportHandler::QtViewportHandler):
(WebKit::QtViewportHandler::animatePageItemRectVisible):
(WebKit::QtViewportHandler::scaleAnimationValueChanged):

git-svn-id: svn://svn.chromium.org/blink/trunk@119697 bbb929c8-8fbe-4397-9dbb-9b2b20218538